--- a/SwiftSwap/Base.lproj/Main.storyboard
+++ b/SwiftSwap/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         </mutableArray>
     </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Login-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="SwiftSwap" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Login" id="vXZ-lx-hvc" customClass="ViewController" customModule="SwiftSwap" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -27,11 +27,6 @@
                                 <color key="textColor" red="0.33333333333333331" green="0.67450980392156867" blue="0.93333333333333335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a valid .edu email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oSK-do-W1G">
-                                <rect key="frame" x="87" y="339" width="200" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="The best way to buy and sell locally" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oDI-7s-dJh">
                                 <rect key="frame" x="69" y="249" width="237" height="47"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -39,8 +34,8 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7OJ-ol-hoJ">
-                                <rect key="frame" x="97" y="397" width="180" height="40"/>
-                                <state key="normal" title="Sign Up" image="login-btn.png">
+                                <rect key="frame" x="60" y="425" width="254" height="56"/>
+                                <state key="normal" image="login-btn.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -50,6 +45,11 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fabric.png" translatesAutoresizingMaskIntoConstraints="NO" id="1Xk-hx-Us9">
                                 <rect key="frame" x="112" y="29" width="150" height="150"/>
                             </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a valid .edu email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oSK-do-W1G">
+                                <rect key="frame" x="76" y="373" width="222" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -64,20 +64,42 @@
             </objects>
             <point key="canvasLocation" x="-54.5" y="335.5"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Main Feed-->
         <scene sceneID="mZs-St-AbB">
             <objects>
-                <tableViewController id="AMB-S2-BZf" sceneMemberID="viewController">
+                <tableViewController title="Main Feed" id="AMB-S2-BZf" customClass="MainTableViewController" customModule="SwiftSwap" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="SG6-LX-GSo">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="vAO-k9-78D">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="mainCell" rowHeight="300" id="vAO-k9-78D" customClass="MainCellTableViewCell" customModule="SwiftSwap" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vAO-k9-78D" id="vtg-Dl-0XC">
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fabric.png" translatesAutoresizingMaskIntoConstraints="NO" id="iJ1-rp-ZvB">
+                                            <rect key="frame" x="56" y="8" width="262" height="209"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="onE-e1-azm">
+                                            <rect key="frame" x="8" y="233" width="359" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                            <color key="textColor" red="0.0" green="0.28235294117647058" blue="0.61568627450980395" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="This is a short description of the item." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fiy-7J-NYx">
+                                            <rect key="frame" x="8" y="270" width="359" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="postCaption" destination="Fiy-7J-NYx" id="pnW-PH-RhD"/>
+                                    <outlet property="postTitle" destination="onE-e1-azm" id="hjS-Jy-ikh"/>
+                                    <outlet property="postedImage" destination="iJ1-rp-ZvB" id="sFD-U7-AZo"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -85,12 +107,101 @@
                             <outlet property="delegate" destination="AMB-S2-BZf" id="gh7-hE-pVG"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="Bpd-NH-mP2"/>
+                    <navigationItem key="navigationItem" title="Main" id="Bpd-NH-mP2">
+                        <barButtonItem key="leftBarButtonItem" title="Map" id="Byi-Or-7bX"/>
+                        <barButtonItem key="rightBarButtonItem" title="Post" id="sZc-cA-3bA">
+                            <connections>
+                                <segue destination="eFh-sw-hoJ" kind="show" id="azl-0m-2Bv"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AtR-Xg-cNJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1389.5" y="335.5"/>
+            <point key="canvasLocation" x="1389.5" y="331.5"/>
+        </scene>
+        <!--Post Item-->
+        <scene sceneID="L7h-7y-rGh">
+            <objects>
+                <viewController title="Post Item" id="eFh-sw-hoJ" customClass="PostImageViewController" customModule="SwiftSwap" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Q5W-Kd-vyQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="b8Q-jI-oya"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="MkQ-tZ-LbR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fabric.png" translatesAutoresizingMaskIntoConstraints="NO" id="YRg-s5-4by">
+                                <rect key="frame" x="47" y="73" width="280" height="280"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zhb-xY-4Pe">
+                                <rect key="frame" x="192" y="361" width="135" height="50"/>
+                                <color key="backgroundColor" red="0.0" green="0.28235294119999998" blue="0.61568627450000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Use Picture">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="usePicture:" destination="eFh-sw-hoJ" eventType="touchUpInside" id="0bM-89-giV"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add a title..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KAr-L9-Ahy">
+                                <rect key="frame" x="47" y="435" width="177" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add a caption..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PlR-YH-hFt">
+                                <rect key="frame" x="47" y="496" width="280" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="$ (optional)" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZsO-CX-pdx">
+                                <rect key="frame" x="232" y="435" width="95" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZCj-Zd-EZx">
+                                <rect key="frame" x="85" y="560" width="205" height="57"/>
+                                <color key="backgroundColor" red="0.0" green="0.28235294119999998" blue="0.61568627450000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <state key="normal" title="Post">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="createPost:" destination="eFh-sw-hoJ" eventType="touchUpInside" id="27E-0H-m5d"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pw4-1p-ASI">
+                                <rect key="frame" x="47" y="361" width="135" height="50"/>
+                                <color key="backgroundColor" red="0.0" green="0.28235294119999998" blue="0.61568627450000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="New Picture">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="newPicture:" destination="eFh-sw-hoJ" eventType="touchUpInside" id="w3l-WG-5xf"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="captionTextField" destination="PlR-YH-hFt" id="ycV-bi-WmY"/>
+                        <outlet property="imageToPost" destination="YRg-s5-4by" id="6ha-KA-44P"/>
+                        <outlet property="priceTextField" destination="ZsO-CX-pdx" id="9Vn-ea-v81"/>
+                        <outlet property="titleTextField" destination="KAr-L9-Ahy" id="uQ4-Zt-8vo"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DX2-sV-nn7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2001.5" y="591.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="CJ3-iX-e6d">
